Update logs
